cloudformation/postgres.yml
AWSTemplateFormatVersion: 2010-09-09
Description: RDS postgres instance.
Parameters:
    DatabaseName:
      Default: "prisma"
      Description: The database name (Default "prisma", change if you are creating more than one database)
      Type: String

    DatabaseInstanceType:
        Default: db.t2.micro
        AllowedValues:
            - db.t2.micro
            - db.t2.small
            - db.t2.medium
            - db.t2.large
            - db.t2.xlarge
            - db.t2.2xlarge
            - db.r4.large
            - db.r4.xlarge
            - db.r4.2xlarge
            - db.r4.4xlarge
            - db.r4.8xlarge
            - db.r4.16xlarge
            - db.m4.large
            - db.m4.2xlarge
            - db.m4.4xlarge
            - db.m4.10xlarge
            - db.m4.16xlarge
        Description: "The instance type to use for the database. Pricing: https://aws.amazon.com/rds/mysql/pricing/"
        Type: String

    DatabasePassword:
        AllowedPattern: "[a-zA-Z0-9]+"
        ConstraintDescription: must contain only alphanumeric characters. Must have length 8-41.
        Description: The database admin account password. (Choose a secure password)
        MaxLength: '41'
        MinLength: '8'
        NoEcho: 'true'
        Type: String

    DatabaseUsername:
        Default: "prisma"
        AllowedPattern: "[a-zA-Z0-9]+"
        ConstraintDescription: must contain only alphanumeric characters. Must have length 1-16
        Description: The database admin account user name. (Default "prisma")
        MaxLength: '16'
        MinLength: '1'
        Type: String

    AllocatedStorage:
        Default: 20
        Description: Storage to allocate in GB (Default "20")
        Type: Number
        MinValue: 20
        MaxValue: 16384
        ConstraintDescription: Allocated storage size must be in range 20-16384 GB

Metadata:
    AWS::CloudFormation::Interface:
        ParameterGroups:
            - Label:
                default: Database Configuration
              Parameters:
                - DatabaseInstanceType
                - DatabaseName
                - DatabaseUsername
                - DatabasePassword
        ParameterLabels:
            DatabaseName:
              default: Database name
            DatabaseInstanceType:
                default: Database Instance Type
            DatabasePassword:
                default: Database Password
            DatabaseUsername:
                default: Database Username

Resources:
    StackAlarmTopic:
        Type: AWS::SNS::Topic
        Properties:
            DisplayName: Stack Alarm Topic

    DatabaseSubnetGroup:
        Type: AWS::RDS::DBSubnetGroup
        Properties:
            DBSubnetGroupDescription: CloudFormation managed DB subnet group.
            SubnetIds:
                - !Ref PublicSubnet1
                - !Ref PublicSubnet2

    ParameterGroup:
        Type: "AWS::RDS::DBParameterGroup"
        Properties:
            Description: Prisma DB parameter group
            Family: postgres9.6
            Parameters:
                shared_preload_libraries: pg_stat_statements

    DatabaseInstance:
        Type: AWS::RDS::DBInstance
        Properties:
            Engine: postgres
            EngineVersion: 9.6.6
            DBInstanceClass:
                Ref: DatabaseInstanceType
            DBSubnetGroupName:
                Ref: DatabaseSubnetGroup
            DBParameterGroupName: !Ref ParameterGroup
            PubliclyAccessible: "true"
            StorageType: "gp2"
            AllocatedStorage: !Ref AllocatedStorage
            BackupRetentionPeriod: 35
            DBInstanceIdentifier: !Ref DatabaseName
            MasterUsername:
              Ref: DatabaseUsername
            MasterUserPassword:
              Ref: DatabasePassword
            PreferredBackupWindow: 02:00-03:00
            PreferredMaintenanceWindow: mon:03:00-mon:04:00
            DBSubnetGroupName:
                Ref: DatabaseSubnetGroup
            VPCSecurityGroups:
                - Ref: DatabaseSecurityGroup

    DatabaseCPUAlarm:
        Type: AWS::CloudWatch::Alarm
        Properties:
            AlarmDescription: Primary database CPU utilization is over 80%.
            Namespace: AWS/RDS
            MetricName: CPUUtilization
            Unit: Percent
            Statistic: Average
            Period: 300
            EvaluationPeriods: 2
            Threshold: 80
            ComparisonOperator: GreaterThanOrEqualToThreshold
            Dimensions:
                - Name: DBInstanceIdentifier
                  Value:
                      Ref: DatabaseInstance
            AlarmActions:
                - Ref: StackAlarmTopic
            InsufficientDataActions:
                - Ref: StackAlarmTopic

    DatabaseMemoryAlarm:
        Type: AWS::CloudWatch::Alarm
        Properties:
            AlarmDescription: Primary database freeable memory is under 700MB.
            Namespace: AWS/RDS
            MetricName: FreeableMemory
            Unit: Bytes
            Statistic: Average
            Period: 300
            EvaluationPeriods: 2
            Threshold: 700000000
            ComparisonOperator: LessThanOrEqualToThreshold
            Dimensions:
                - Name: DBInstanceIdentifier
                  Value:
                      Ref: DatabaseInstance
            AlarmActions:
                - Ref: StackAlarmTopic
            InsufficientDataActions:
                - Ref: StackAlarmTopic
            OKActions:
                - Ref: StackAlarmTopic

    VPC:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: "10.192.0.0/16"
            EnableDnsSupport: "true"
            EnableDnsHostnames: "true"
            Tags:
                - Key: Name
                  Value: !Join ["-", [!Ref DatabaseName, "database"]]

    InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
                - Key: Name
                  Value: !Ref DatabaseName

    InternetGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            InternetGatewayId: !Ref InternetGateway
            VpcId: !Ref VPC

    PublicSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 0, !GetAZs ]
            CidrBlock: "10.192.12.0/24"
            MapPublicIpOnLaunch: true
            Tags:
                - Key: Name
                  Value: !Sub ${DatabaseName} Public Subnet (AZ1)

    PublicSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 1, !GetAZs ]
            CidrBlock: "10.192.13.0/24"
            MapPublicIpOnLaunch: true
            Tags:
                - Key: Name
                  Value: !Sub ${DatabaseName} Public Subnet (AZ2)

    PublicRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: Name
                  Value: !Sub ${DatabaseName} Public Routes

    DefaultPublicRoute:
        Type: AWS::EC2::Route
        DependsOn: InternetGatewayAttachment
        Properties:
            RouteTableId: !Ref PublicRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway

    PublicSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet1

    PublicSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet2

    DatabaseSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            VpcId: !Ref VPC
            GroupDescription: Access to database
            SecurityGroupIngress:
                - CidrIp: 0.0.0.0/0
                  FromPort: 3306
                  ToPort: 3306
                  IpProtocol: tcp
            Tags:
                - Key: Name
                  Value: !Sub ${DatabaseName}-security-group

Outputs:
    DatabaseEndpoint:
        Description: The database endpoint
        Value: !GetAtt DatabaseInstance.Endpoint.Address

    DatabasePort:
        Description: The database port
        Value: !GetAtt DatabaseInstance.Endpoint.Port
